# ewat

./: .claudeignore  .dockerignore  .gitignore  Dockerfile  README.md  STATUS.md  agents.md  bash_setup_ewat.sh  pyproject.toml
.github/workflows/: data-pipeline-quality.yml
configs/: collection.yaml  collection_ci_smoke.yaml  collection_v4.yaml  default.yaml  ontology.yaml  scenarios.yaml
configs/experiment/: encoder.yaml  precursor.yaml  typing.yaml
data/ontology/: ewat_instances.owl  ewat_instances.ttl  full_ontology.owl  full_ontology.ttl  taxonomy.owl  taxonomy.ttl
docs/: cluster_semantics.md  defense_technique.md  evaluation_protocol.md  evolution.md  formalisation.md  incident_2026-06-06_cluster.md  limitations.md  point_projet.md  results.md  runbook_v4.md
docs/notes/: synthese_collecte_dataset.md  week1and2.md
docs/paper/: bibliography.bib  main.tex
docs/paper/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_formalisation.tex  04_method.tex  05_setup.tex  06_results.tex  07_validity.tex  08_limitations.tex  09_discussion.tex  10_conclusion.tex  A_appendix.tex
docs/rapport/: bibliography.bib  chiffres.md  defense_slides.tex  main.tex  squelette_rapport_stage.md
docs/rapport/sections/: 01_introduction.tex  02_formalisation.tex  03_dataset.tex  04_pipeline.tex  05_resultats.tex  06_experiments.tex  06b_robustness.tex  07_discussion.tex  08_difficultes.tex
k8s/: otel-collector-gateway.yaml
k8s/apps/: otel-demo-values.yaml
k8s/chaos-mesh/: registry.yaml
k8s/chaos-mesh/config/: bad_env_config.sh  bad_limits.sh  misconfigured_hpa.sh  routing_error.sh
k8s/chaos-mesh/contention/: cpu_starvation.yaml  io_error.yaml  io_throttle.yaml  memory_pressure.yaml  net_saturation.yaml  noisy_neighbor.yaml  resource_leak.yaml
k8s/chaos-mesh/drift/: drift_config_change.sh  drift_rolling_deploy.sh  drift_scale_up.sh  drift_traffic_ramp.sh  faulty_deploy_overlap.sh
k8s/chaos-mesh/gray/: fail_slow_cpu.yaml  fail_slow_latency.yaml  intermittent_error.yaml  jitter.yaml  partial_degradation.yaml  probe_misconfig.sh
k8s/chaos-mesh/hard/: crash.yaml  crash_loop.yaml  image_pull_error.sh  network_loss.yaml  network_partition.yaml  node_drain.sh  oom.yaml
k8s/chaos-mesh/systemic/: backpressure_kafka.yaml  cascade_error.yaml  cascade_latency.yaml  metastable_load.yaml  thundering_herd.sh
mlflow/: experiment_registry.md
notebooks/: _build_walkthrough.py  dataset_exploration.ipynb  dataset_generation_walkthrough.ipynb  episode_collection_walkthrough.ipynb
scripts/: __init__.py  adapt_rcaeval.py  analyze_features.py  assemble_dataset.py  build_cluster_semantics.py  build_features.py  chaos_injector.py  collect_labeled.py  enforce_heldout_v5.py  export_paper_figures.py  export_report_figures.py  export_thesis_figures.py  impute_features.py  merge_collection_runs.py  patch_error_rate.py  patch_latency_p99.py  postprocess_semantic.py  record_episode.py  run_collection_campaign.py  run_pipeline.py  run_sweep.py  run_v4_retest.sh  smoke_analysis.py  snapshot_collector.py  synthesize_composite_episodes.py  validate_dataset.py  validate_raw.py  validate_v4.py  validate_v5.py
src/ewat/alerts/: __init__.py  alert.py  assembler.py
src/ewat/drift/: __init__.py  calibration.py  detector.py  mmd.py
src/ewat/encoder/: __init__.py  dataset.py  factory.py  simclr.py  stgat.py  stgcn.py
src/ewat/ontology/: __init__.py  causal.py  composite_causal.py  cooccurrence.py  graph.py  literature_taxonomy.py  owl_export.py  owl_schema.py  queries.py  reasoning.py  service_propagation.py  synthesis.py  temporal.py
src/ewat/openset/: __init__.py  mahalanobis.py  openmax.py
src/ewat/precursor/: __init__.py  dataset.py  model.py
src/ewat/typing/: __init__.py  clustering.py  loader.py  pairs.py  saliency_explainer.py  shap_explainer.py  siamese.py
src/ewat/utils/: bootstrap.py
src/graph/: __init__.py  adjacency.py  builder.py  diagnostics.py  serialization.py  types.py  validation.py
src/telemetry/: __init__.py  feature_names.py  prom_queries.py  recorder.py  signal_builder.py
src/telemetry/collectors/: __init__.py  log_collector.py  prometheus_collector.py  trace_collector.py
src/telemetry/extractors/: __init__.py  logs_file.py  prom_file.py  traces_file.py
src/telemetry/features/: __init__.py  aggregation.py  lexical.py  semantic.py
src/utils/: __init__.py  seeding.py  serialization.py
tests/integration/: test_collection_e2e_real.py  test_e2e_determinism.py
tests/unit/: test_validate_dataset.py
tests/unit/alerts/: test_alert.py  test_assembler.py
tests/unit/drift/: test_calibration.py  test_detector.py  test_mmd.py
tests/unit/encoder/: test_dataset_instance_norm.py  test_factory_layer_norm.py  test_fit_scaler_nan_aware.py  test_imputation_strategies.py  test_simclr.py  test_stgat.py  test_stgcn.py
tests/unit/graph/: __init__.py  test_adjacency.py  test_builder.py  test_serialization.py  test_validation.py
tests/unit/ontology/: test_causal.py  test_cooccurrence.py  test_graph.py  test_ontology_relation_fields.py  test_owl_export.py  test_owl_schema.py  test_reasoning.py  test_service_propagation.py  test_synthesis.py  test_temporal.py
tests/unit/openset/: test_mahalanobis_and_tail_ratio.py  test_openmax.py
tests/unit/precursor/: test_class_weight_and_stability.py  test_dataset.py  test_model.py
tests/unit/scripts/: test_assemble_index_columns.py  test_postprocess_semantic.py  test_record_episode_quality.py  test_stratified_permutation.py  test_stratified_split.py
tests/unit/telemetry/: test_aggregation.py  test_collectors.py  test_lexical.py  test_prometheus_collector.py  test_signal_builder.py
tests/unit/typing/: test_pairs.py  (+4 more)
v5/: LAUNCH.md  README.md  launch_3runners.sh
v5/chaos/: catalog.yaml  inject.py
v5/collect/: build_features_tt.py  build_features_v5.py  enable_jvm_metrics.sh  health_monitor.py  probe.py  repull_failed.py  reset_tt_state.py  run_campaign.py  run_episode.py  semantic.py  tt_services.json
v5/deploy/: deploy_runner.sh  monitoring_nodeports.yaml
v5/loadgen/: queries.py  runner.py  scenarios.py
(+3 files in other folders)
