[project]
name = "ewat"
version = "0.1.0"
description = "Early Warning and Anomaly Typing for Kubernetes microservices"
requires-python = ">=3.11"

dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-prometheus",
    "kubernetes",
    "torch>=2.2",
    "torch-geometric",
    "networkx",
    "scikit-learn",
    "scipy",
    "numpy",
    "pandas",
    "pyarrow",
    "statsmodels",
    "jpype1",
    "pyinform",
    "shap",
    "captum",
    "sentence-transformers",
    "mlflow",
    "hydra-core",
    "omegaconf",
    "matplotlib",
    "seaborn",
    "plotly",
    "prometheus-api-client",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "ipykernel",
    "jupyter",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E501"]
"scripts/record_episode.py" = ["E402"]
"scripts/build_features.py" = ["E402", "I001", "N803", "N806"]
"src/telemetry/collectors/log_collector.py" = ["N803", "N806"]
"src/telemetry/collectors/prometheus_collector.py" = ["N803", "N806"]
"src/telemetry/collectors/trace_collector.py" = ["N803", "N806"]
"src/telemetry/signal_builder.py" = ["N802", "N806"]
"tests/unit/graph/test_adjacency.py" = ["N806"]
"tests/unit/telemetry/test_collectors.py" = ["N806"]
"tests/unit/telemetry/test_prometheus_collector.py" = ["N806"]
"tests/unit/telemetry/test_signal_builder.py" = ["N806"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: marks tests that require real external systems",
    "timeout: marks tests with explicit runtime budget",
]
