[project]
name = "ewat"
version = "0.1.0"
description = "Early Warning and Anomaly Typing for Kubernetes microservices"
requires-python = ">=3.11"

dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-prometheus",
    "kubernetes",
    "torch==2.11.0",
    "torch-geometric==2.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "numpy==1.26.4",
    "pandas",
    "pyarrow",
    "statsmodels",
    "shap",
    "captum",
    "sentence-transformers",
    "mlflow",
    "hydra-core",
    "omegaconf",
    "matplotlib",
    "seaborn",
    "plotly",
    "prometheus-api-client",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "ipykernel",
    "jupyter",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E501"]
"scripts/record_episode.py" = ["E402"]
"scripts/build_features.py" = ["E402", "E501", "I001", "N803", "N806"]
"scripts/adapt_rcaeval.py" = ["E401", "E402", "E501", "F401", "F541", "I001", "N802", "N806"]
"scripts/analyze_features.py" = ["E501", "F541", "N803", "N806"]
"scripts/chaos_injector.py" = ["E501"]
"scripts/impute_features.py" = ["E501", "N806"]
"scripts/patch_error_rate.py" = ["N806"]
"scripts/patch_latency_p99.py" = ["N806"]
"scripts/validate_v4.py" = ["N806"]
"src/telemetry/collectors/log_collector.py" = ["N803", "N806"]
"src/telemetry/collectors/prometheus_collector.py" = ["N803", "N806"]
"src/telemetry/collectors/trace_collector.py" = ["N803", "N806"]
"src/telemetry/signal_builder.py" = ["N802", "N806"]
"src/telemetry/recorder.py" = ["E501"]
"src/ewat/drift/mmd.py" = ["N803", "N806"]
"src/ewat/drift/calibration.py" = ["N806"]
"src/ewat/drift/detector.py" = ["N803", "N806"]
"src/ewat/encoder/dataset.py" = ["N806"]
"src/ewat/encoder/simclr.py" = ["I001", "N802", "N803", "N806", "N812"]
"src/ewat/encoder/stgcn.py" = ["N806", "N812"]
"src/ewat/encoder/stgat.py" = ["N806", "N812"]
"src/ewat/typing/saliency_explainer.py" = ["N806"]
"src/ewat/typing/siamese.py" = ["N812"]
"tests/**/*.py" = ["I001", "N8"]
"tests/unit/graph/test_adjacency.py" = ["N806"]
"tests/unit/telemetry/test_collectors.py" = ["N806"]
"tests/unit/telemetry/test_prometheus_collector.py" = ["N806"]
"tests/unit/telemetry/test_signal_builder.py" = ["N806"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: marks tests that require real external systems",
    "timeout: marks tests with explicit runtime budget",
]
